--- a/Teufelshafen/localisation/replace/victory_points_l_english.yml
+++ b/Teufelshafen/localisation/replace/victory_points_l_english.yml
@@ -22,3 +22,4 @@
   VICTORY_POINTS_1896:0 "Teufelshafen"
   VICTORY_POINTS_1549:0 "Grafsberg"
   VICTORY_POINTS_904:0 "Pervoske"
+  VICTORY_POINTS_4504:0 "Krija"
